kubernetes/staging/liveramp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: segment-checker
  labels:
    app: segment-checker
spec:
  selector:
    matchLabels:
      app: segment-checker
  template:
    metadata:
      labels:
        app: segment-checker
    spec:
      containers:
        - name: segment-checker
          image: 192.168.5.100/liveramp:0.0.3
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
