kubernetes/staging/liveramp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liveramp-service
spec:
  type: ClusterIP
  selector:
    app: liveramp-deployment
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
