kubernetes/staging/liveramp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liveramp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: liveramp.70ld.home
      http:
        paths:
          - backend:
              service:
                name: liveramp-service
                port:
                  number: 80
            path: /
            pathType: Prefix
